@@ -3,6 +3,7 @@ Changelog next version
 * Added OSGi metadata to manifest files (issue 204) (thanks to Gabor Liptak for patch)
 * Upgraded to Javassist 3.18.1-GA.
 * Test case with expectedExceptions no longer fails when using PowerMock with TestNG (issue 366) (thanks to majorpetya for the patch).
+* Fixed a classloading issue with the JUnit4TestSuiteChunkerImpl (thanks to Robert Gay for the patch)
 
 Change log 1.5.2 (2013-11-18)
 -----------------------------
